add a font color parameter to the badge variant mixin

--- a/scss/mixins/_badge.scss
+++ b/scss/mixins/_badge.scss
@@ -1,7 +1,8 @@
 // Badges
 
-@mixin badge-variant($color) {
-  background-color: $color;
+@mixin badge-variant($bgcolor,$color) {
+  background-color: $bgcolor;
+  color: $color;
 
   &[href] {
     @include hover-focus {
