--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -88,6 +88,7 @@
 .navbar-toggler {
   align-self: flex-start; // Prevent toggler from growing to full width when it's the only visible navbar child
   padding: $navbar-toggler-padding-y $navbar-toggler-padding-x;
+  cursor: pointer;
   font-size: $navbar-toggler-font-size;
   line-height: 1;
   background: transparent; // remove default button style
