Updates to sequence component (#90)
* sequence-lg option for sequence.
* Improvements to paragraphs in sequences.
* Move sequences styles to mixin
* Change sequence content colours.

--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -367,7 +367,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@font-spacing-base">@font-spacing-base</label>
-    <input id="input-@font-spacing-base" type="text" value="0.028em" data-var="@font-spacing-base" class="form-control"/>
+    <input id="input-@font-spacing-base" type="text" value="0.016em" data-var="@font-spacing-base" class="form-control"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
@@ -2669,21 +2669,30 @@
 <div class="row">
   <div class="col-xs-4">
     <label for="input-@sequence-step-height">@sequence-step-height</label>
-    <input id="input-@sequence-step-height" type="text" value="32px" data-var="@sequence-step-height" class="form-control"/>
-  </div>
-  <div class="col-xs-4">
-    <label for="input-@sequence-step-height-small">@sequence-step-height-small</label>
-    <input id="input-@sequence-step-height-small" type="text" value="24px" data-var="@sequence-step-height-small" class="form-control"/>
+    <input id="input-@sequence-step-height" type="text" value="24px" data-var="@sequence-step-height" class="form-control"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@sequence-margin">@sequence-margin</label>
     <input id="input-@sequence-margin" type="text" value="16px" data-var="@sequence-margin" class="form-control"/>
   </div>
+  <div class="col-xs-4">
+    <label for="input-@sequence-margin-lg">@sequence-margin-lg</label>
+    <input id="input-@sequence-margin-lg" type="text" value="24px" data-var="@sequence-margin-lg" class="form-control"/>
+  </div>
   <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@sequence-item-spacing">@sequence-item-spacing</label>
+    <input id="input-@sequence-item-spacing" type="text" value="4px" data-var="@sequence-item-spacing" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@sequence-item-spacing-lg">@sequence-item-spacing-lg</label>
+    <input id="input-@sequence-item-spacing-lg" type="text" value="12px" data-var="@sequence-item-spacing-lg" class="form-control"/>
+  </div>
   <div class="col-xs-4">
     <label for="input-@sequence-pip-size">@sequence-pip-size</label>
     <input id="input-@sequence-pip-size" type="text" value="8px" data-var="@sequence-pip-size" class="form-control"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@sequence-line-width">@sequence-line-width</label>
     <input id="input-@sequence-line-width" type="text" value="2px" data-var="@sequence-line-width" class="form-control"/>
@@ -2692,11 +2701,11 @@
     <label for="input-@sequence-border">@sequence-border</label>
     <input id="input-@sequence-border" type="text" value="#e2e6e8" data-var="@sequence-border" class="form-control"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@sequence-bg">@sequence-bg</label>
     <input id="input-@sequence-bg" type="text" value="#FFF" data-var="@sequence-bg" class="form-control"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@sequence-inverse-border">@sequence-inverse-border</label>
     <input id="input-@sequence-inverse-border" type="text" value="@brand-navy-minus-20" data-var="@sequence-inverse-border" class="form-control"/>
@@ -2705,14 +2714,27 @@
     <label for="input-@sequence-inverse-bg">@sequence-inverse-bg</label>
     <input id="input-@sequence-inverse-bg" type="text" value="@brand-navy" data-var="@sequence-inverse-bg" class="form-control"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@sequence-spacing-horizontal">@sequence-spacing-horizontal</label>
     <input id="input-@sequence-spacing-horizontal" type="text" value="24px" data-var="@sequence-spacing-horizontal" class="form-control"/>
   </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@sequence-spacing-horizontal-lg">@sequence-spacing-horizontal-lg</label>
+    <input id="input-@sequence-spacing-horizontal-lg" type="text" value="48px" data-var="@sequence-spacing-horizontal-lg" class="form-control"/>
+  </div>
   <div class="col-xs-4">
     <label for="input-@sequence-icon-size">@sequence-icon-size</label>
     <input id="input-@sequence-icon-size" type="text" value="24px" data-var="@sequence-icon-size" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@sequence-icon-size-md">@sequence-icon-size-md</label>
+    <input id="input-@sequence-icon-size-md" type="text" value="32px" data-var="@sequence-icon-size-md" class="form-control"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@sequence-icon-size-lg">@sequence-icon-size-lg</label>
+    <input id="input-@sequence-icon-size-lg" type="text" value="40px" data-var="@sequence-icon-size-lg" class="form-control"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@sequence-icon-border">@sequence-icon-border</label>
