--- a/less/variables.less
+++ b/less/variables.less
@@ -147,7 +147,7 @@
 @line-height-h5:          24px;
 @line-height-h6:          24px;
 
-@font-spacing-base:       0.028em;
+@font-spacing-base:       0.016em;
 @font-spacing-semi-bold:  0;
 
 @font-weight-normal:      500;
@@ -1155,9 +1155,11 @@
 //== Sequence
 //
 //##
-@sequence-step-height: 32px;
-@sequence-step-height-small: 24px;
+@sequence-step-height: 24px;
 @sequence-margin: 16px;
+@sequence-margin-lg: 24px;
+@sequence-item-spacing: 4px;
+@sequence-item-spacing-lg: 12px;
 @sequence-pip-size: 8px;
 @sequence-line-width: 2px;
 
@@ -1168,8 +1170,11 @@
 @sequence-inverse-bg: @brand-navy;
 
 @sequence-spacing-horizontal: 24px;
+@sequence-spacing-horizontal-lg: 48px;
 
 @sequence-icon-size: 24px;
+@sequence-icon-size-md: 32px;
+@sequence-icon-size-lg: 40px;
 @sequence-icon-border: @text-color;
 
 //== Column layout
