--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,7 +2,7 @@
 //
 // Used in conjunction with global variables to enable certain theme features.
 
-@import "mixins/core"
+@import "mixins/core";
 
 // Utilities
 @import "mixins/breakpoints";
