--- a/docs/examples/partials/simple-nav.html
+++ b/docs/examples/partials/simple-nav.html
@@ -12,7 +12,8 @@
 				</span>
 				<span class="pull-xs-left m-l-1">Menu</span>
 			</button>
-			<h1 class="navbar-title hidden-xs hidden-sm hidden-md h3">{{$ctrl.title}}</h1>
+			<h1 class="navbar-title hidden-xs hidden-sm hidden-md h3 m-b-0">{{$ctrl.title}}</h1>
+			<p class="navbar-subtitle hidden-xs hidden-sm hidden-md" ng-if="$ctrl.subtitle">{{$ctrl.subtitle}}</p>
 		</div>
 
 		<ul class="nav navbar-nav pull-xs-right">
