--- a/less/navbar.less
+++ b/less/navbar.less
@@ -876,13 +876,17 @@
 
 .navbar-title {
   float: left;
-  line-height: 30px;
-  margin-top: 13px;
-  margin-bottom: 13px;
+  line-height: 32px;
+  margin-top: 12px;
+  margin-bottom: 12px;
 
   @media (min-width: @screen-lg-min) {
     font-weight: @font-weight-bold;
   }
+}
+.navbar-subtitle {
+  font-size: @font-size-small;
+  margin-bottom: 16px;
 }
 .navbar-logo {
   width: 127px;
