--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -41,6 +41,7 @@
 @import "list-group";
 @import "responsive-embed";
 @import "close";
+@import "tags";
 
 // Components w/ JavaScript
 @import "modal";
