--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -32,9 +32,9 @@ $brand-warning: #f8ae00;
 $brand-danger:  #db2828;
 $brand-inverse: #444547;
 
-// Colors
+// Shadows
 //
-// Grayscale and brand colors for use across Bootstrap.
+// Standardized box-shadows to be used in cards/tiles, etc.
 
 $box-shadow-default: 0 0.3rem 0.5rem rgba(0,0,0,0.12);
 $box-shadow-soft: 0 0.05rem 0.1rem rgba(0,0,0,0.20);
