Fixed missing mixin hover-focus

--- a/scss/mixins/_hover.scss
+++ b/scss/mixins/_hover.scss
@@ -15,6 +15,18 @@
 }
 
 
+@mixin hover-focus {
+  @if $enable-hover-media-query {
+    &:focus { @content }
+    @include hover { @content }
+  } @else {
+    &:focus,
+    &:hover {
+      @content
+    }
+  }
+}
+
 @mixin plain-hover-focus {
   @if $enable-hover-media-query {
     &,
