--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -191,5 +191,6 @@ $tag-active-shadow: inset 0 .2rem .2rem rgba(0,0,0,.24);
 $tag-active-color: $brand-primary;
 $tag-active-bg: $tag-bg;
 
+$tag-sm-font-size: $font-size-sm;
 
 @import "custom/tags";
