adjusts media in dropdowns

--- a/scss/custom/_media.scss
+++ b/scss/custom/_media.scss
@@ -31,6 +31,6 @@
 
 .media-body,
 .media-image {
-  padding-left: $media-spacing-x * .5;
-  padding-right: $media-spacing-x * .5;
+  margin-left: $media-spacing-x * .5;
+  margin-right: $media-spacing-x * .5;
 }
