--- a/scss/_popover.scss
+++ b/scss/_popover.scss
@@ -129,6 +129,7 @@
 
 // Offset the popover to account for the popover arrow
 .popover-title {
+  color: $popover-title-color;
   padding: $popover-title-padding-y $popover-title-padding-x;
   margin-bottom: 0; // Reset the default from Reboot
   font-size: $font-size-base;
@@ -144,6 +145,7 @@
 
 .popover-content {
   padding: $popover-content-padding-y $popover-content-padding-x;
+  color: $popover-content-color;
 }
 
 
